--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -13,7 +13,7 @@ background: $back-ground-productos;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: -1;
-}
+
 
 .triangle{
   width: 300px;
@@ -29,6 +29,18 @@ background: $back-ground-productos;
   right: 100px;
   top: 100px;
   animation: t1 8s ease infinite;
+
+  @keyframes t1 {
+    0%{
+        transform: rotate(45deg) translateY(0px);
+    }
+    50%{
+        transform: rotate(45deg) translateY(20px);
+    }
+    100%{
+        transform: rotate(45deg) translateY(0px);
+    }
+  }
 }
 
 .triangle2{
@@ -37,6 +49,18 @@ background: $back-ground-productos;
   background: linear-gradient(to left, #ee8105, #c7371e);
   top: 350px;
   animation: t2 9s ease infinite;
+
+  @keyframes t2 {
+    0%{
+        transform: rotate(65deg) translateY(0px);
+    }
+    50%{
+        transform: rotate(65deg) translateY(20px);
+    }
+    100%{
+        transform: rotate(65deg) translateY(0px);
+    }
+  }
 }
 
 .triangle3{
@@ -45,42 +69,22 @@ background: $back-ground-productos;
   background: linear-gradient(to left, #1b8fc5, #df0f8f);
   left: 200px;
   animation: t3 7s ease infinite;
-}
 
-@keyframes t1 {
-  0%{
-      transform: rotate(45deg) translateY(0px);
-  }
-  50%{
-      transform: rotate(45deg) translateY(20px);
-  }
-  100%{
-      transform: rotate(45deg) translateY(0px);
-  }
-}
-
-@keyframes t2 {
-  0%{
-      transform: rotate(65deg) translateY(0px);
-  }
-  50%{
-      transform: rotate(65deg) translateY(20px);
-  }
-  100%{
-      transform: rotate(65deg) translateY(0px);
+  
+  @keyframes t3 {
+    0%{
+        transform: rotate(45deg) translateY(0px);
+    }
+    50%{
+        transform: rotate(45deg) translateY(20px);
+    }
+    100%{
+        transform: rotate(45deg) translateY(0px);
+    }
   }
 }
 
-@keyframes t3 {
-  0%{
-      transform: rotate(45deg) translateY(0px);
-  }
-  50%{
-      transform: rotate(45deg) translateY(20px);
-  }
-  100%{
-      transform: rotate(45deg) translateY(0px);
-  }
+
 }
 
 .jersey__title {
@@ -126,25 +130,25 @@ background: $back-ground-productos;
 
 }
 
-  .funkosyubble__title {
-    text-align: center;
-    margin-top: 50px;
-    position: relative;
-    z-index: -1;
-    margin: 0 auto;
-    width: 80%;
-    margin-top: 20px;
-    box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
-    background: rgba(255, 255, 255, 0.432);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-radius: 15px;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    transition: all 300ms;
-    font-size: 2.5rem;
-    font-family: 'Paytone One', sans-serif;
-  }
+.funkosyubble__title {
+   text-align: center;
+   margin-top: 50px;
+   position: relative;
+   z-index: -1;
+   margin: 0 auto;
+   width: 80%;
+   margin-top: 20px;
+   box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+   background: rgba(255, 255, 255, 0.432);
+   border-left: 1px solid rgba(255, 255, 255, 0.5);
+   border-top: 1px solid rgba(255, 255, 255, 0.5);
+   border-radius: 15px;
+   backdrop-filter: blur(5px);
+   -webkit-backdrop-filter: blur(5px);
+   transition: all 300ms;
+   font-size: 2.5rem;
+   font-family: 'Paytone One', sans-serif;
+}
 
 .container__cards{
   width: 100%;
@@ -172,14 +176,21 @@ background: $back-ground-productos;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   transition: all 300ms;
-}
 
-.card:hover{
-  transform: translateY(-5px);
-}
+  &:hover{
+    transform: translateY(-5px);
+  }
 
-.card:hover .cover__card img{
-  transform: scale(1.0);
+  &:hover .cover__card img{
+    transform: scale(1.0);
+
+    p{
+      margin-top: 20px;
+      font-size: 14px;
+      font-weight: 300;  
+      letter-spacing: 0.5px;
+    }
+  }
 }
 
 .cover__card{
@@ -189,6 +200,7 @@ background: $back-ground-productos;
   overflow: hidden;
   text-align: center;
 
+  
   h3 {
     margin-bottom: 25px;
     font-family: 'Paytone One', sans-serif;
@@ -201,33 +213,27 @@ background: $back-ground-productos;
   .funko__bubble {
     height:  80%;
   }
+
+  img{
+    width: 80%;
+    transition: all 300ms;
+  }
 }
 
-.cover__card img{
-  width: 80%;
-  transition: all 300ms;
-}
-
-.card p{
-  margin-top: 20px;
-  font-size: 14px;
-  font-weight: 300;  
-  letter-spacing: 0.5px;
-}
 
 
 .footer__card{
   margin-top: 1.5rem;
   display: flex;
   justify-content: space-between;
-}
 
-.footer__card h3{
+
+ h3{
   font-size: 15px;
   font-weight: 500;
 }
 
-.footer__card button {
+ button {
   border-radius: 20px;
   background-color: #0fafdf;
   width: 6rem;
@@ -238,3 +244,4 @@ background: $back-ground-productos;
   font-family: 'Paytone One', sans-serif;
 }
 
+}
